--- a/packages/presentation/pubspec.yaml
+++ b/packages/presentation/pubspec.yaml
@@ -28,6 +28,11 @@ dependencies:
   intl: ^0.18.0
   uuid: ^4.0.0
 
+  # Hand Tracking
+  camera: ^0.11.0+2
+  hand_landmarker: ^2.1.2
+  permission_handler: ^11.0.1
+
 dev_dependencies:
   build_runner: ^2.4.6
   freezed: ^2.4.5
