feat(video-generation): Implement video generation UI and state management
- Added video_generation_ui.dart for UI models related to video generation.
- Created video_generation_ui_state.dart to manage the UI state of the video generation page.
- Introduced video_generation.dart in the domain layer to define video generation related enums and data classes.
- Removed unused vision_service.dart from the domain layer.
- Updated domain.dart to export video_generation.dart.
- Enhanced debug_list_page.dart and debug_list_page_view_model.dart to include navigation for video generation.
- Refactored hand tracking imports to support platform-specific implementations.
- Created platform-specific implementations for hand_landmarker to support web and mobile.
- Added utility functions in formatters.dart for file size and duration formatting.
- Developed video_generation_mapper.dart to map domain models to UI models.
- Implemented video_generation_page.dart for the video generation page UI.
- Created video_generation_page_view_model.dart to handle business logic and state management for video generation.
- Updated pubspec.yaml to remove direct dependency on hand_landmarker, relying on platform support instead.

--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,10 @@ migrate_working_dir/
 .pub/
 build/
 
+# Generated code (freezed, json_serializable, riverpod_generator)
+*.freezed.dart
+*.g.dart
+
 # Symbolication related
 app.*.symbols
 
