--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
 sdk.dir=/Users/hyunjong.kim/Library/Android/sdk
-flutter.sdk=/opt/homebrew/Caskroom/flutter/3.29.0/flutter
+flutter.sdk=/Users/hyunjong.kim/fvm/versions/3.35.1
 flutter.buildMode=debug
 flutter.versionName=1.0.0
 flutter.versionCode=1
