Refactor and replace image generation services with Kling AI integration
- Removed GeminiSketchToImageService, GeminiVisionService, and ImagenGenerationService.
- Introduced KlingVideoGenerationService for image-to-video generation using Kling AI API.
- Updated service providers to use KlingVideoGenerationService with access and secret keys.
- Removed SketchTestPage and its ViewModel as they are no longer needed.
- Updated VideoGenerationPage and ViewModel to support image selection and video generation using Kling API.
- Added JWT token generation for API authentication in KlingVideoGenerationService.
- Implemented polling for video generation task completion with progress updates.
- Updated pubspec.yaml to include crypto package for JWT signing.

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,13 @@
 GEMINI_API_KEY=your_gemini_api_key_here
 
 # ===========================================
+# Kling AI Video Generation API
+# ===========================================
+# Kling AI에서 발급: https://klingai.com
+KLING_ACCESS_KEY=your_kling_access_key_here
+KLING_SECRET_KEY=your_kling_secret_key_here
+
+# ===========================================
 # Image Generation Provider 선택
 # ===========================================
 # 옵션:
