--- a/packages/presentation/pubspec.yaml
+++ b/packages/presentation/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   # AI API
   google_generative_ai: ^0.4.7
   http: ^1.2.0
+  crypto: ^3.0.3
 
 dev_dependencies:
   build_runner: ^2.4.6
