feat: Implement fal.ai video generation service and integrate with UI
- Added fal.ai video generation service with API integration.
- Updated .env.example to include fal.ai API key configuration.
- Enhanced VideoGenerationPageViewModel to support fal.ai and Kling AI providers.
- Added new actions in VideoGenerationPageAction for video download, sharing, and opening in browser.
- Updated VideoGenerationPage UI to handle new actions and display download completion.
- Integrated logger for better debugging and error handling.
- Updated pubspec.yaml to include logger and url_launcher dependencies.

--- a/.env.example
+++ b/.env.example
@@ -7,11 +7,23 @@
 GEMINI_API_KEY=your_gemini_api_key_here
 
 # ===========================================
-# Kling AI Video Generation API
+# Video Generation API (택일)
 # ===========================================
+
+# Option 1: fal.ai (추천 - 간단한 API, 안정적)
+# fal.ai에서 발급: https://fal.ai/dashboard/keys
+FAL_KEY=your_fal_api_key_here
+
+# Option 2: Kling AI Direct (복잡한 JWT 인증)
 # Kling AI에서 발급: https://klingai.com
 KLING_ACCESS_KEY=your_kling_access_key_here
 KLING_SECRET_KEY=your_kling_secret_key_here
+
+# Video Generation Provider 선택
+# 옵션:
+#   - fal : fal.ai Kling wrapper (추천, 간단한 API)
+#   - kling : Kling AI Direct API (JWT 인증 필요)
+VIDEO_GEN_PROVIDER=fal
 
 # ===========================================
 # Image Generation Provider 선택
