--- a/packages/presentation/pubspec.yaml
+++ b/packages/presentation/pubspec.yaml
@@ -44,6 +44,13 @@ dependencies:
   http: ^1.2.0
   crypto: ^3.0.3
 
+  # Logging
+  logger: ^2.4.0
+
+  # URL & Sharing
+  url_launcher: ^6.2.0
+  share_plus: ^7.2.0
+
 dev_dependencies:
   build_runner: ^2.4.6
   freezed: ^2.4.5
