--- a/packages/presentation/pubspec.yaml
+++ b/packages/presentation/pubspec.yaml
@@ -39,10 +39,16 @@ dependencies:
   # 画像関連
   image_picker: ^0.8.9  # Android Gradle 8.9.1과 호환
   path_provider: ^2.0.15
+  gal: ^2.3.0
+  image: ^4.1.3  # 이미지 후처리용
 
   # AI API
   google_generative_ai: ^0.4.7
   http: ^1.2.0
+
+flutter:
+  assets:
+    - assets/
 
 dev_dependencies:
   build_runner: ^2.4.6
